--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "main": false
   },
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production & nodemon server.js",
     "debug": "ndb server.js",
     "build": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled",
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
