--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "main": false
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production & nodemon server.js",
     "debug": "ndb server.js",
     "build": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled",
@@ -45,5 +46,8 @@
   },
   "devDependencies": {
     "parcel": "^2.0.0-rc.0"
+  },
+  "engines": {
+    "node": "^10"
   }
 }
